# aoc2024

./: .gitignore  .ocamlformat  LICENSE  README.md  aoc2024.opam  dune-project
day01/: dune  main.ml
day02/: dune  main.ml
day06/: dune  main.ml
